# sys-observe

./: .gitignore  README.md  pyproject.toml
src/emc/: cli.py
src/emc/core/: disk_info.py  models.py  system_info.py
src/emc/formatters/: text.py
src/sys_observe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
